--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <provider
-            android:authorities="com.example.alexander.popularmoviesapp.provider"
+            android:authorities="com.example.alexander.popularmoviesapp"
             android:name="com.example.alexander.popularmoviesapp.database.TMDBProvider"
             android:exported="false" />
     </application>
