--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.alexander.popularmoviesapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,7 +10,21 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="com.orm.SugarApp"
+        tools:replace="android:icon">
+        <meta-data
+            android:name="DATABASE"
+            android:value="tdmbfavorites.db" />
+        <meta-data
+            android:name="DATABASE"
+            android:value="3" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DATABASE"
+            android:value="com.example.alexander.popularmoviesapp.moviedata" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
